# ducky

./: .gitignore  CMakeLists.txt  LICENSE  PROTOCOL.md  README.md
.github/workflows/: c.yml
src/: CMakeLists.txt  cache.c  cache.h  command.c  command.h  ducky.c  errors.c  errors.h  logger.c  logger.h  main.c  multiply.c  multiply.h  prime.c  prime.h  response.c  response.h  sum.c  sum.h
tests/: CMakeLists.txt  cache_test.c  command_test.c  errors_test.c  logger_test.c  multiply_test.c  prime_test.c  response_test.c  sum_test.c
